syntax = "proto3";
option csharp_namespace = "Qube.Grpc";

package Greet;

service StreamService {
  rpc QueryStreamAsync (QueryEnvelope) returns (stream ResponseEnvelope);
}

message QueryEnvelope {
  string payload = 1;
  string sourceTypeName = 2;
  string registeredTypes = 3;
  string streamPattern = 4;
}

message ResponseEnvelope {
  string payload = 1;
  string payloadType = 2;
  enum RxMethod {
    NEXT = 0;
    COMPLETED = 1;
    ERROR = 2;
  }
  RxMethod rxMethod = 3;
}
